--- a/movimientos/templates/faltantes.html
+++ b/movimientos/templates/faltantes.html
@@ -18,7 +18,7 @@
 
         <div class="table-responsive py-2">
             
-            <h1>Listado de Pedidos con Faltantes</h1>
+            <h1>Listado de Pedidos con Accesorios Faltantes</h1>
 
             <table class="table table-striped">
                 <thead>
@@ -69,12 +69,46 @@
                         <td>{{c.fcascos}}</td>
                         <td>{{c.frepetidoras}}</td>
                         <td>{{c.festaciones}}</td>
-                        <!-- <td><a href='#' class="btn btn-success">Ver Detalle</a></td>  -->
                     </tr>
                     {% endfor %}     
                    
                 </tbody>
             </table>
+
+            <h1>Listado de Pedidos con Radios Faltantes</h1>
+
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>
+                            ID Salida
+                        </th>
+                        <th>
+                            Cliente
+                        </th>
+                        <th>
+                            Serial
+                        </th>
+                        
+                        <th colspan="2"></th>
+
+                    </tr>
+                </thead>
+
+                <tbody>
+                    {% for d in listadorxfaltante %}
+                    
+                    <tr>
+                        <td>{{d.cod_salida}}</td>
+                        <td>{{d.nombre}}</td>
+                        <td>{{d.n_serial}}</td>
+                        
+                    </tr>
+                    {% endfor %}     
+                   
+                </tbody>
+            </table>
+
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
