--- a/movimientos/templates/faltantes.html
+++ b/movimientos/templates/faltantes.html
@@ -69,6 +69,7 @@
                         <td>{{c.cascos}}</td>
                         <td>{{c.repetidoras}}</td>
                         <td>{{c.estaciones}}</td>
+                        <td><a href='/entradas/{{c.cod_salida}}' class="btn btn-success">Recibir</a></td>
                     </tr>
                     {% endfor %}     
                    
