--- a/movimientos/templates/editarOrden.html
+++ b/movimientos/templates/editarOrden.html
@@ -45,7 +45,7 @@
                             Repetidoras
                         </th>
                         <th>
-                            Estaciones
+                            Handsfree Tipo Escolta
                         </th>
                         <th>
                             Dirección
