--- a/movimientos/templates/faltantes.html
+++ b/movimientos/templates/faltantes.html
@@ -48,7 +48,7 @@
                             repetidoras
                         </th>
                         <th>
-                            Estaciones
+                            Handsfree Tipo Escolta
                         </th>
                         
                         <th colspan="2"></th>
