--- a/movimientos/templates/salidaGenerada.html
+++ b/movimientos/templates/salidaGenerada.html
@@ -44,7 +44,7 @@
                             Repetidoras
                         </th>
                         <th>
-                            Estaciones
+                            Handsfree Tipo Escolta
                         </th>
                     </tr>
                 </thead>
