--- a/movimientos/templates/entradas.html
+++ b/movimientos/templates/entradas.html
@@ -147,7 +147,7 @@
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
             <h5><b>Registrar Accesorios</h5></b>
             <h4><font color ="red">{{error1}}</h4></font><br>
-            <form action='/generarEntrada/{{listado_entrada.id}}' method="POST">
+            <form action='/generarEntrada/{{listado_entrada.id}}/{{listado_orden.id}}' method="POST">
                 {% csrf_token %}              
                 <!-- <input type="text" id="serialRx" name="serialRx" size="30" /> -->
                 {{formEntrada|crispy}}
