--- a/movimientos/templates/inventario.html
+++ b/movimientos/templates/inventario.html
@@ -88,6 +88,12 @@
             <br>
             <h5>
                 <b>
+                    <font color="green">PLOMO DISPONIBLES = {{plomoDisponibles}}</font>
+                </b>
+            </h5>
+            <br>
+            <h5>
+                <b>
                     <font color="green">DISPONIBLES - TOTAL = {{cantidadDisponible}}</font>
                 </b>
             </h5>
