--- a/movimientos/templates/inventario.html
+++ b/movimientos/templates/inventario.html
@@ -76,19 +76,19 @@
             <br>
             <h5>
                 <b>
-                    <font color="green">AMARILLAS DISPONIBLES = {{amarillasDisponibles}}</font>
+                    <font color="#9B870C">AMARILLAS DISPONIBLES = {{amarillasDisponibles}}</font>
                 </b>
             </h5>
             <br>
             <h5>
                 <b>
-                    <font color="green">MORADAS DISPONIBLES = {{moradasDisponibles}}</font>
+                    <font color="#572364">MORADAS DISPONIBLES = {{moradasDisponibles}}</font>
                 </b>
             </h5>
             <br>
             <h5>
                 <b>
-                    <font color="green">PLOMO DISPONIBLES = {{plomoDisponibles}}</font>
+                    <font color="#4B4B4B">PLOMO DISPONIBLES = {{plomoDisponibles}}</font>
                 </b>
             </h5>
             <br>
