--- a/movimientos/templates/editarOrden.html
+++ b/movimientos/templates/editarOrden.html
@@ -97,6 +97,9 @@
                             <th>
                                 Retiro
                             </th>
+                            <th>
+                               Color Mochila
+                            </th>
                             <th colspan="2"></th>
 
                         </tr>
@@ -108,6 +111,9 @@
                         </td>
                         <td>
                             <b><font color ="red">{{listaDetalles.fecha_retiro}}</b></font> 
+                        </td>
+                        <td>
+                            <input type="text" id="mochila" name="mochila" size="7" />
                         </td>
                         <td></td>
                     </tr>
