--- a/movimientos/templates/editarOrden.html
+++ b/movimientos/templates/editarOrden.html
@@ -121,6 +121,9 @@
                                 </button>
                             </form> 
                         </td>
+                        <td>
+                            {{mochilaguardada}}
+                        </td>
                         <td></td>
                     </tr>
                 </table>
