--- a/movimientos/templates/inventario.html
+++ b/movimientos/templates/inventario.html
@@ -68,7 +68,7 @@
 
 <body>
     {% load crispy_forms_tags %}
-    <div class="row">
+    <div class="row" style="margin-left: 10px;">
         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <h3>
                 INVENTARIO ACTUAL
