--- a/movimientos/templates/ordenesDevueltas.html
+++ b/movimientos/templates/ordenesDevueltas.html
@@ -44,7 +44,7 @@
                         <td>{{c.id}}</td>
                         <td>{{c.cliente}}</td>
                         <td>{{c.fecha_creacion}}</td>
-                        <td><a href='#' class="btn btn-success">Ver Detalle</a></td> 
+                        <td><a href='/guiadevueltos/{{c.id}}' class="btn btn-success">Ver Detalle</a></td> 
                     </tr>
                     {% endfor %}        
                 </tbody>
