--- a/movimientos/templates/ordenesDevueltas.html
+++ b/movimientos/templates/ordenesDevueltas.html
@@ -20,6 +20,15 @@
             
             <h1>Listado de Pedidos Devueltos</h1>
 
+            <form class="form" method="POST">
+				{% csrf_token %}
+				{{form_orden|crispy}}
+
+				<button>
+					Guardar
+				</button>
+			</form>
+
             <table class="table table-striped">
                 <thead>
                     <tr>
