--- a/movimientos/templates/ordenesDevueltas.html
+++ b/movimientos/templates/ordenesDevueltas.html
@@ -20,14 +20,14 @@
             
             <h1>Listado de Pedidos Devueltos</h1>
 
-            <form class="form" method="POST">
+            <!-- <form class="form" method="POST">
 				{% csrf_token %}
 				{{form|crispy}}
 
 				<button>
 					Guardar
 				</button>
-			</form>
+			</form> -->
 
             <table class="table table-striped">
                 <thead>
