--- a/movimientos/templates/ordenesProcesadas.html
+++ b/movimientos/templates/ordenesProcesadas.html
@@ -30,6 +30,9 @@
                             Cliente
                         </th>
                         <th>
+                            Teléfono
+                        </th>
+                        <th>
                             Creada el:
                         </th>
                         <th>
@@ -37,9 +40,6 @@
                         </th>
                         <th>
                             Retirar el:
-                        </th>
-                        <th>
-                            Estado:
                         </th>
                         <th>
                             Observaciones:
@@ -54,10 +54,10 @@
                     <tr>
                         <td>{{c.id}}</td>
                         <td>{{c.cliente}}</td>
+                        <td>{{c.telefono}}</td>
                         <td>{{c.fecha_creacion}}</td>
                         <td><font color="red">{{c.fecha_entrega}}</td></font>
                         <td><font color="red">{{c.fecha_retiro}}</td></font>
-                        <td>{{c.estado}}</td>
                         <td>{{c.observaciones}} {{cantidadRadios}}</td>
                         <!-- <td><a href='/detalleOrden/{{c.id}}' class="btn btn-success">Detall</a></td> -->
                         <td><a href='/cambiaEstadoEnt/{{c.id}}' class="btn btn-warning">Entregado</a></td>
