--- a/movimientos/templates/salidaGenerada.html
+++ b/movimientos/templates/salidaGenerada.html
@@ -29,23 +29,24 @@
                             Cobras
                         </th>
                         <th>
+                            Handsfree
+                        </th>
+                        <th>
+                            Handsfree Tipo Escolta
+                        </th>
+                        <th>
+                            Cascos
+                        </th>
+                        <th>
                             Baterias extras
                         </th>
                         <th>
                             Cargadores
                         </th>
                         <th>
-                            Handsfree
-                        </th>
-                        <th>
-                            Cascos
-                        </th>
-                        <th>
                             Repetidoras
                         </th>
-                        <th>
-                            Handsfree Tipo Escolta
-                        </th>
+                        
                     </tr>
                 </thead>
                 <tbody>
@@ -57,23 +58,24 @@
                             {{salidaGenerada.cobras}}
                         </td>
                         <td>
-                            {{salidaGenerada.cargadores}}
-                        </td>
-                        <td>
-                            {{salidaGenerada.cargadores}}
-                        </td>
-                        <td>
                             {{salidaGenerada.handsfree}}
+                        </td>
+                        <td>
+                            {{salidaGenerada.estaciones}}
                         </td>
                         <td>
                             {{salidaGenerada.cascos}}
                         </td>
                         <td>
-                            {{salidaGenerada.repetidoras}}
+                            {{salidaGenerada.baterias}}
                         </td>
                         <td>
-                            {{salidaGenerada.estaciones}}
+                            {{salidaGenerada.cargadores}}
+                        </td>   
+                        <td>
+                            {{salidaGenerada.repetidoras}}
                         </td>
+                        
 
                     </tr>
                 </tbody>
