--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -11,6 +11,7 @@
 <body style="background-color: rgb(201, 216, 216);">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="navbar-nav">
+        {% if user.is_staff %}
         <a class="nav-item nav-link" href='/ordenes/' >Nuevo Pedido</a>
         <a class="nav-item nav-link" href='/salidas/'>Pedidos</a>
         <a class="nav-item nav-link" href='/ordenesProcesadas/'>Pedidos Preparados</a>
@@ -20,6 +21,13 @@
         <a class="nav-item nav-link" href='/inventario/'>Inventario</a>
         <a class="nav-item nav-link" href='/registro/'>Nuevo Usuario</a>
         <a class="nav-item nav-link" href='/logout/'>Cerrar Sesion</a>
+        {% else %}
+        <a class="nav-item nav-link" href='/salidas/'>Pedidos</a>
+        <a class="nav-item nav-link" href='/ordenesProcesadas/'>Pedidos Preparados</a>
+        <a class="nav-item nav-link" href='/ordenesCerradas/'>Pedidos Entregados</a>
+        <a class="nav-item nav-link" href='/ordenesDevueltas/'>Pedidos Devueltos</a>
+        <a class="nav-item nav-link" href='/registro/'>Nuevo Usuario</a>
+        {% endif %}
       </div>
     </div>
   </nav>
