--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -26,7 +26,7 @@
         <a class="nav-item nav-link" href='/ordenesProcesadas/'>Pedidos Preparados</a>
         <a class="nav-item nav-link" href='/ordenesCerradas/'>Pedidos Entregados</a>
         <a class="nav-item nav-link" href='/ordenesDevueltas/'>Pedidos Devueltos</a>
-        <a class="nav-item nav-link" href='/registro/'>Nuevo Usuario</a>
+        <a class="nav-item nav-link" href='/logout/'>Cerrar Sesion</a>
         {% endif %}
       </div>
     </div>
