--- a/movimientos/templates/ordenesDevueltas.html
+++ b/movimientos/templates/ordenesDevueltas.html
@@ -15,11 +15,27 @@
 <body>
 
     <div class="row">
-
+        <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-4 col-xl-6">
         <div class="table-responsive py-2">
-            
-            <h1>Listado de Pedidos Devueltos</h1>
 
+                <h1>Listado de Pedidos Devueltos</h1>
+        </div>
+        </div>
+        <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-4 col-xl-6">
+            <form action='#' method="POST">
+                {% csrf_token %}
+            <select name="clienteNombre" style="width: 300px;">
+                {% for d in lista_cliente %}
+                <option value="{{d.nombre}}"> {{d.nombre}}</option>
+                {% endfor%}
+            </select>
+            <button type="submit" class="btn btn-warning">Buscar</button>
+            </form>
+        </div>
+        </div>
+
+        <div class="row">
+            <div class="table-responsive py-2">
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -44,7 +60,7 @@
                         <td>{{c.id}}</td>
                         <td>{{c.cliente}}</td>
                         <td>{{c.fecha_creacion}}</td>
-                        <td><a href='/guiadevueltos/{{c.id}}' class="btn btn-success">Ver Detalle</a></td> 
+                        <td><a href='#' class="btn btn-success">Ver Detalle</a></td> 
                     </tr>
                     {% endfor %}        
                 </tbody>
