--- a/movimientos/templates/ordenesDevueltas.html
+++ b/movimientos/templates/ordenesDevueltas.html
@@ -46,7 +46,7 @@
                             Cliente
                         </th>
                         <th>
-                            Registrada el:
+                            Fecha del Evento:
                         </th>
                         
                         <th colspan="2"></th>
@@ -59,7 +59,7 @@
                     <tr>
                         <td>{{c.id}}</td>
                         <td>{{c.cliente}}</td>
-                        <td>{{c.fecha_creacion}}</td>
+                        <td>{{c.fecha_evento}}</td>
                         <td><a href='#' class="btn btn-success">Ver Detalle</a></td> 
                     </tr>
                     {% endfor %}        
