--- a/movimientos/templates/ordenesDevueltas.html
+++ b/movimientos/templates/ordenesDevueltas.html
@@ -60,7 +60,7 @@
                         <td>{{c.id_orden}}</td>
                         <td>{{c.cliente}}</td>
                         <td>{{c.fecha_evento}}</td>
-                        <td><a href='/guiadevueltos/{{c.id}}' class="btn btn-success">Ver Detalle</a></td> 
+                        <td><a href='/guiadevueltos/{{c.id_orden}}' class="btn btn-success">Ver Detalle</a></td> 
                     </tr>
                     {% endfor %}        
                 </tbody>
