--- a/movimientos/templates/ordenesProcesadas.html
+++ b/movimientos/templates/ordenesProcesadas.html
@@ -54,7 +54,7 @@
         <div class="table-responsive py-2">
             
             <div class="centrar">
-                <img src="{% static 'backtrak_logo.png' %}" width="50" height="50">
+                <img src="{% static 'logo.png' %}" width="50" height="50">
                 <h1>Listado de Pedidos Preparados</h1>
             </div>
 
