--- a/movimientos/templates/ordenesCerradas.html
+++ b/movimientos/templates/ordenesCerradas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 <html lang="en">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -12,13 +13,51 @@
     <title>BackTrack</title>
 </head>
 
+<style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Agregar una sombra a la tabla */
+      
+    }
+  
+    tr {
+      padding: 8px;
+      text-align: center;
+      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
+    }
+    .centrar {
+    text-align: center;
+  }
+  th {
+        color: #0047ab;
+      padding: 8px;
+      text-align: center;
+      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
+      background-color: white;
+    }
+   h1 {
+    color: #0047ab;
+    font-size: 36px; /* Tamaño de fuente */
+    text-align: center; /* Alineación del texto */
+    text-transform: uppercase; /* Transformación a mayúsculas */
+    letter-spacing: 2px; /* Espaciado entre letras */
+    font-weight: bold; /* Negrita */
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);/* Sombra de texto */
+   }
+  </style>
+
+
 <body>
 
     <div class="row">
 
         <div class="table-responsive py-2">
             
-            <h1>Listado de Ordenes</h1>
+            <div class="centrar">
+                <img src="{% static 'logo.png' %}" width="50" height="50">
+                <h1>Listado de pedidos entregados</h1>
+            </div>
 
             <table class="table table-striped">
                 <thead>
