--- a/movimientos/templates/ordenesDevueltas.html
+++ b/movimientos/templates/ordenesDevueltas.html
@@ -49,24 +49,11 @@
 <body>
 
     <div class="row">
-        <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-4 col-xl-6">
         <div class="table-responsive py-2">
-            <img src="{% static 'logo.png' %}" width="50" height="50">
+            <div class="centrar">
+                <img src="{% static 'logo.png' %}" width="50" height="50">
                 <h1>Listado de Pedidos Devueltos</h1>
-        </div>
-        </div>
-        <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-4 col-xl-6">
-            <form action='/buscaOrdenesDevueltas/' method="POST">
-                {% csrf_token %}
-            <select name="clienteNombre" style="width: 300px;">
-                {% for d in lista_cliente %}
-                <option value="{{d.nombre}}"> {{d.nombre}}</option>
-                {% endfor%}
-            </select>
-            <button type="submit" class="btn btn-warning">Buscar</button>
-            </form>
-        </div>
-        </div>
+            </div>
 
         <div class="row">
             <div class="table-responsive py-2">
@@ -83,8 +70,17 @@
                             Fecha del Evento:
                         </th>
                         
-                        <th colspan="2"></th>
-
+                        <th>
+                            <form action='/buscaOrdenesDevueltas/' method="POST">
+                                {% csrf_token %}
+                            <select name="clienteNombre" style="width: 300px;">
+                                {% for d in lista_cliente %}
+                                <option value="{{d.nombre}}"> {{d.nombre}}</option>
+                                {% endfor%}
+                            </select>
+                            <button type="submit" class="btn btn-warning">Buscar</button>
+                            </form>
+                        </th>
                     </tr>
                 </thead>
 
