--- a/movimientos/templates/monitor.html
+++ b/movimientos/templates/monitor.html
@@ -65,7 +65,7 @@
         <div class="table-responsive py-2">
             
             <div class="centrar">
-                <img src="{% static 'backtrak_logo.png' %}" width="50" height="50">
+                <img src="{% static 'logo.png' %}" width="50" height="50">
                 <h1>Listado de Pedidos para entregar hoy</h1>
             </div>
             
