--- a/movimientos/templates/monitor.html
+++ b/movimientos/templates/monitor.html
@@ -154,7 +154,7 @@
                         <tr>
                             <td>{{d.id}}</td>
                             <td>{{d.cliente}}</td>
-                            <td>{{d.fecha_entrega}}</td>
+                            <td>{{d.fecha_retiro}}</td>
                             <td>{{d.observaciones}}</td>
                         </tr>
                         {% endfor %}
