--- a/movimientos/templates/monitor.html
+++ b/movimientos/templates/monitor.html
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6" style="margin-top: 60px;">
-            <h1>total por entregar: {{total_ordenes}}</h1>
+            <h1>total por entregar: {{total_ordenes|default:0}}</h1>
         </div>
         
     </div>
