--- a/movimientos/templates/salidaGenerada.html
+++ b/movimientos/templates/salidaGenerada.html
@@ -46,7 +46,7 @@
                         <th>
                             Repetidoras
                         </th>
-                        
+
                     </tr>
                 </thead>
                 <tbody>
@@ -71,11 +71,11 @@
                         </td>
                         <td>
                             {{salidaGenerada.cargadores}}
-                        </td>   
+                        </td>
                         <td>
                             {{salidaGenerada.repetidoras}}
                         </td>
-                        
+
 
                     </tr>
                 </tbody>
@@ -130,6 +130,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script>
+        document.getElementById("id_serial").focus();
+    </script>
 
 </body>
 {% endblock %}
