--- a/movimientos/templates/ordenesCerradas.html
+++ b/movimientos/templates/ordenesCerradas.html
@@ -96,6 +96,7 @@
                         <td><font color = "red">{{c.fecha_retiro}}</td></font>
                         <td><a href='/entradas/{{c.id_salida}}' class="btn btn-success">Recibir</a></td>
                         <td><a href='/generaPDFGuia/{{c.id}}' target="_blank" class="btn btn-success">Guia</a></td>
+                        <td><a href='/generaPDFprint/{{c.id}}' target="_blank" class="btn btn-primary">Etiqueta</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
