--- a/movimientos/templates/informes.html
+++ b/movimientos/templates/informes.html
@@ -90,7 +90,7 @@
     <div class="row">
         <div style="text-align: left;" class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <h2>Reporte de Radios</h2>
-            <form action='/#informe/' method="POST">
+            <form action='/informe/' method="POST">
                 {% csrf_token %}
                 {{form}}
                 <button type="submit" style="width: 140px; height: 40px; text-align: center;" name="menos"
