--- a/movimientos/templates/informes.html
+++ b/movimientos/templates/informes.html
@@ -103,12 +103,30 @@
                 </style>
             </form>
         </div>
+        <div style="background-color: #0047ab; text-align: right; color: #0047ab; margin-right: 0px;">.</div>
+
     </div>
-
+    
     <div class="row">
-        <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
+        <div style="text-align: center;" class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
-          
+          <h2>Reporte de Totales por Mes</h2>
+            <form action="/informePdfTotales/" method="POST">
+                {% csrf_token %}
+                
+                <label for="years">Selecciona un año:</label>
+                <select id="years" name="years">
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                </select>
+            <br>
+            
+            <button type="submit" class="btn btn-warning" name = "accion" value="Buscar">Generar</button>
+        
+            </form>
+
+
+
 
         </div>
     </div>
