--- a/movimientos/templates/informes.html
+++ b/movimientos/templates/informes.html
@@ -108,7 +108,7 @@
     </div>
     
     <div class="row">
-        <div style="text-align: center;" class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+        <div style="text-align: left;" class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
           <h2>Reporte de Totales por Mes</h2>
             <form action="/informePdfTotales/" method="POST">
