--- a/movimientos/templates/informes.html
+++ b/movimientos/templates/informes.html
@@ -111,7 +111,7 @@
         <div style="text-align: left;" class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
           <h2>Reporte de Totales por Mes</h2>
-            <form action="/#informePdfTotales/" method="POST">
+            <form action="/informePdfTotales/" method="POST">
                 {% csrf_token %}
                 
                 <label for="years">Selecciona un año:</label>
