--- a/movimientos/templates/informes.html
+++ b/movimientos/templates/informes.html
@@ -133,7 +133,7 @@
     </div>
 
     <div class="row">
-        <div style="text-align: center; margin-left: 10px;" class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
+        <div style="text-align: left; margin-left: 10px;" class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
 
             <h2>Ranking Clientes</h2>
             <form action="/#informePdfTotales/" method="POST">
