--- a/movimientos/templates/informes.html
+++ b/movimientos/templates/informes.html
@@ -104,7 +104,7 @@
             </form>
         </div>
         <br>
-        <div style="background-color: #0047ab; text-align: right; color: #0047ab; margin-right: 0px; margin-top: 20px; margin-bottom: 20px;">.</div>
+        <div style="background-color: #0047ab; text-align: right; color: #0047ab; margin-left: 10px; margin-right: 0px; margin-top: 20px; margin-bottom: 20px;">.</div>
         <br>
 
     </div>
