--- a/movimientos/templates/informes.html
+++ b/movimientos/templates/informes.html
@@ -102,10 +102,8 @@
                     }
                 </style>
             </form>
+            <div style="background-color: #0047ab; text-align: right; color: #0047ab; margin-right: 0px; margin-top: 20px; margin-bottom: 20px;">.</div>
         </div>
-        <br>
-        <div style="background-color: #0047ab; text-align: right; color: #0047ab; margin-left: 10px; margin-right: 0px; margin-top: 20px; margin-bottom: 20px;">.</div>
-        <br>
 
     </div>
     
