--- a/movimientos/templates/informes.html
+++ b/movimientos/templates/informes.html
@@ -121,7 +121,7 @@
                 </select>
             <br>
             
-            <button type="submit" class="btn btn-warning" name = "accion" value="Buscar">Generar</button>
+            <button type="submit" class="btn btn-warning" name = "accion" value="Buscar">Generar Reporte</button>
         
             </form>
 
@@ -131,7 +131,7 @@
     </div>
 
     <div class="row">
-        <div style="text-align: left; margin-left: 10px;" class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
+        <div style="text-align: left; margin-left: 10px;" class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
             <h2>Ranking Clientes</h2>
             <form action="/#informePdfTotales/" method="POST">
@@ -144,7 +144,7 @@
                 </select>
             <br>
             
-            <button type="submit" class="btn btn-warning" name = "accion" value="Buscar">Generar</button>
+            <button type="submit" class="btn btn-warning" name = "accion" value="Buscar">Generar Reporte</button>
         
             </form>
         </div>
