--- a/movimientos/templates/ordenesCerradas.html
+++ b/movimientos/templates/ordenesCerradas.html
@@ -97,6 +97,8 @@
                         <td><a href='/entradas/{{c.id_salida}}' class="btn btn-success">Recibir</a></td>
                         <td><a href='/generaPDFGuia/{{c.id}}' target="_blank" class="btn btn-success">Guia</a></td>
                         <td><a href='/generaPDFprint/{{c.id}}' target="_blank" class="btn btn-primary">Etiqueta</a></td>
+                        <td><a href='/#/{{c.id_salida}}' title=" ESTA OPCIÓN ESTA EN DESARROLLO - NO LE DES CLICK O SE BORRARA TODA LA DATA Y SERÁ TU CULPA XD XD" 
+                            class="btn btn-danger">Devolución Total</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
