prueba_dev_total_03

--- a/movimientos/templates/ordenesCerradas.html
+++ b/movimientos/templates/ordenesCerradas.html
@@ -97,7 +97,7 @@
                         <td><a href='/entradas/{{c.id_salida}}' class="btn btn-success">Recibir</a></td>
                         <td><a href='/generaPDFGuia/{{c.id}}' target="_blank" class="btn btn-success">Guia</a></td>
                         <td><a href='/generaPDFprint/{{c.id}}' target="_blank" class="btn btn-primary">Etiqueta</a></td>
-                        <td><a href='/entradatotal/{{c.id_salida}}' title="" 
+                        <td><a href='/entradatotal/{{c.id_salida}}/c.id' title="" 
                             class="btn btn-danger">Devolución Total</a></td>
                     </tr>
                     {% endfor %}
