--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -20,6 +20,7 @@
         <a class="nav-item nav-link" href='/verFaltante/'>Faltantes</a>
         <a class="nav-item nav-link" href='/inventario/'>Inventario</a>
         <a class="nav-item nav-link" href='/informe/'>Informes</a>
+        <a class="nav-item nav-link" href='/auditoria/'>Auditoría</a>
         <a class="nav-item nav-link" href='/registro/'>Nuevo Usuario</a>
         <a class="nav-item nav-link" href='/logout/'>Cerrar Sesion</a>
         {% else %}
