--- a/movimientos/templates/auditoria.html
+++ b/movimientos/templates/auditoria.html
@@ -3,15 +3,27 @@
 {% block content %}
 {% load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BackTrack</title>
 </head>
+
 <body>
+    <div class="row">
+        <div class="table-responsive py-2">
+            <div class="centrar">
+                <img src="{% static 'logo.png' %}" width="50" height="50">
+                <h1>Auditoría</h1>
+            </div>
+        </div>
+    </div>
+
     <h1>EN CONSTRUCCIÓN</h1>
-    
+
 </body>
 {% endblock %}
+
 </html>
