--- a/movimientos/templates/auditoria.html
+++ b/movimientos/templates/auditoria.html
@@ -13,6 +13,40 @@
     <title>BackTrack</title>
 </head>
 
+<style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Agregar una sombra a la tabla */
+      
+    }
+  
+    tr {
+      padding: 8px;
+      text-align: center;
+      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
+    }
+    .centrar {
+    text-align: center;
+  }
+  th {
+        color: #0047ab;
+      padding: 8px;
+      text-align: center;
+      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
+      background-color: white;
+    }
+   h1 {
+    color: #0047ab;
+    font-size: 36px; /* Tamaño de fuente */
+    text-align: center; /* Alineación del texto */
+    text-transform: uppercase; /* Transformación a mayúsculas */
+    letter-spacing: 2px; /* Espaciado entre letras */
+    font-weight: bold; /* Negrita */
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);/* Sombra de texto */
+   }
+  </style>
+
 <body>
     <div class="row">
         <div class="table-responsive py-2">
